--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "firebase/": "https://esm.sh/firebase@^12.9.0/",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.3",
+    "@google/genai": "https://esm.sh/@google/genai@^1.40.0"
   }
 }
 </script>
@@ -58,7 +59,6 @@
 </head>
   <body class="bg-slate-50 text-slate-900">
     <div id="root"></div>
-    <!-- No Vite, o script aponta para o arquivo .tsx original e o Vite o transforma no build -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
